Trying to fix stretched mockup images on mobile devices. Centered project slides for mobile

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -5,6 +5,10 @@
     text-align: center;
 }
 
+.ant-col-xs-24 {
+    text-align: center;
+}
+
 .project-jumbotron {
     background-color: #FFFFFF;
     position: relative;
@@ -113,6 +117,7 @@
     max-width: 100% !important;
     li {
         padding-left: 1em;
+        text-align: left;
     }
 }
 
@@ -120,13 +125,13 @@
     max-width: 100% !important;
     li {
         padding-left: 1em;
+        text-align: left;
     }
 }
 
 .mockup {
     img {
         width: 80em;
-        height: auto;
         margin: 1em auto 1em auto;
     }
 }
@@ -176,8 +181,6 @@
     .mockup {
         img {
             width: 25em;
-            height: auto;
-            margin: 1em auto 1em auto;
         }
     }
     .back-btn {
@@ -222,8 +225,6 @@
     .mockup {
         img {
             width: 50em;
-            height: auto;
-            margin: 1em auto 1em auto;
         }
     }
     .back-btn {
